maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:5: error: '(' expected but '{' found.
    if {avance()}
       ^Escaper:6: error: illegal start of simple expression
  }
  ^